style.css
body {
  font-family: "Montserrat", sans-serif;
  margin: 0;
  background-color: black;
  color: white;
  overflow: hidden;
}

.main {
  display: flex;
  height: 100vh;
  padding: 0.5rem;
}

.sidebar {
  background-color: red;
  width: 340px;
  border-radius: 1rem;
  background-color: black;
  margin-right: 0.5rem;
}

.main-content {
  background-color: blue;
  flex: 1;
  border-radius: 1rem;
  overflow: auto;
  background-color: #121212;
  padding: 0 1.5rem 0 1.5rem;
}

.music-player {
  background-color: yellow;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 72px;
  background: black;
}

a {
  text-decoration: none;
  color:white;
}

.nav {
  background-color: #121212;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100px;
  padding: 0.5rem 0.75rem;
}

.nav-option {
  line-height: 40px;
  opacity: 0.75;
  padding: 0.5rem 0.75rem;
}

.nav-option:hover {
  opacity: 1;
}

.nav-option i {
  font-size: 1.25rem;
}

.nav-option a {
  font-size: 1rem;
  margin: 1rem;
}

.library {
  background-color: #121212;
  border-radius: 1rem;
  height: 100%;
  margin-top: 0.5rem;
  padding: 0.5rem 0.75rem;
}

.options {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.lib-option img {
  height: 1.25rem;
  width: 1.25rem;
}

.icons {
  font-size: 1.25rem;
  display: flex;
}

.icons i {
  opacity: 0.7;
  margin-right: 1rem;
}

.icons i:hover {
  opacity:1;
}

.box {
  background-color: #232323;
  height: 8rem;
  border-radius: 0.75rem;
  margin: 0.75rem 0 1.75rem 0;
  padding: 0.75rem 1rem;
}

.box-p1 {
  font-size: 1rem;
  font-weight: 500;
}

.box-p2 {
  font-size: 0.75rem;
  opacity: 0.9;
}

.badge {
  background-color: white;
  border:none;
  border-radius: 100px;
  padding: 0.25rem 1rem;
  font-weight: 700;
  margin-top: 0.5rem;
  height: 2rem;
  width: fit-content;
}

.dark-badge {
  background-color: black;
  color: white;
}

.sticky-nav {
  position: sticky;
  top: 0;
  background-color: #121212;
  display: flex;
  justify-content: space-between;
  padding: 1rem 0 1rem 0;
  z-index: 10;
}

.sticky-nav-icons {
  margin: 0.75rem;
}

.sticky-nav-options {
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-item {
  margin-right: 1.5rem;
}

@media (max-width: 1000px) {
  .hide {
    display: none;
  }
}

.card {
  width: 150px;
  border-radius: 0.5rem;
  padding: 1rem;
  margin-left: 1.5rem;
  margin-top: 1rem;
}

.card:hover {
  background-color: #232323;
}

.cards-container {
  display: flex;
  flex-wrap: wrap;
}

.card-img {
  width: 100%;
  border-radius: 0.5rem;
}

.card-title {
  font-weight: 600;
}

.card-info {
  font-size: 13px;
  opacity: 0.8;
}

.footer {
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.line {
  width: 90%;
  height: 50%;
  border-top: 1px solid white;
  opacity: 0.4;
}

.music-player {
  display: flex;
  justify-content:space-between;
  align-items: center;
}

.album {
  width: 25%;
  /* background-color: pink; */
}

.player {
  width: 50%;
  /* background-color: orange; */
}

.controls {
  width: 25%;
  /* background-color: green; */
}

.player-controls {
  display: flex;
  justify-content:center;
  align-items: center;
}

.player-control-icon {
  height: 1rem;
  margin-right: 1.75rem;
  opacity: 0.7;
}

.player-control-icon:hover {
  opacity: 1;
}

.playback-bar {
  display: flex;
  justify-content: center;
  align-items: center;
}

.progress-bar {
  width: 70%;
  appearance: none;
  background-color: transparent;
  cursor: pointer;
}

.progress-bar::-webkit-slider-runnable-track {
  background-color: #ddd;
  border-radius: 100px;
  height: 0.2rem;
}

.progress-bar::-webkit-slider-thumb {
  appearance: none;
  height: 1rem;
  width: 1rem;
  background-color: #1bd760;
  border-radius: 50%;
  margin-top: -6px;
}

.album {
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
  align-items: center;
}

.picture {
  height: 55px;
  width: 55px;
  border-radius: 0.3rem;
  margin: 0.5rem;
  object-fit: cover;
}

.album-text {
  margin: 1.25rem;
}

.album-title {
  font-size: 14px;
  font-weight: 500;

}

.album-info {
  font-size: 12px;
  margin-top: -10px;
  opacity: 0.7;
}

.album-icons {
  display: flex;
  justify-content: center;
  align-items: center;
}

.album-icon1 {
  height: 1.25rem;
  margin: 0.5rem;
  opacity: 0.7;
}

.album-icon1:hover {
  opacity: 1;
}

.album-icon2 {
  height: 1.8rem;
  opacity: 0.8;
}

.album-icon2:hover {
  opacity: 1;
}

.controls {
  display: flex;
  justify-content: center;
  align-items: center;
}

.controls-icon {
  opacity:0.8;
  margin: 0.3rem;
  height: 2.5rem;
}

.controls-icon:hover {
  opacity:1;
}

.controls-icon3 {
  opacity:0.8;
  margin: 0.3rem;
  height: 1.5rem;
}

.controls-icon3:hover {
  opacity: 1;
}

.controls-icon4 {
  opacity:0.7;
  margin: 0.3rem;
  height: 1.25rem;

}

.controls-icon4:hover {
  opacity: 1;
}

.control-bar {
  width: 70%;
  appearance: none;
  background-color: transparent;
  cursor: pointer;
}

.control-bar::-webkit-slider-runnable-track {
  background-color: #ddd;
  border-radius: 100px;
  height: 0.2rem;
}

.control-bar::-webkit-slider-thumb {
  appearance: none;
  height: 1rem;
  width: 1rem;
  background-color: #1bd760;
  border-radius: 50%;
  margin-top: -6px;
}

